--- a/recovery-office/netlify.toml
+++ b/recovery-office/netlify.toml
@@ -1,12 +1,13 @@
 [build]
   base = "."
   publish = "build"
-  command = "CI=false npm run build"
+  command = "npm run build:netlify"
 
 [build.environment]
   SKIP_TYPESCRIPT_CHECK = "true"
   TSC_COMPILE_ON_ERROR = "true"
   CI = "false"
+  DISABLE_ESLINT_PLUGIN = "true"
 
 # Redirect all routes to index.html for single-page application
 [[redirects]]
